# discovery

microbit/: Cargo.toml
microbit/src/: SUMMARY.md
microbit/src/06-hello-world/: Cargo.toml  Embed.toml  README.md  embed.gdb  panic.md
microbit/src/06-hello-world/auxiliary/: Cargo.toml
microbit/src/06-hello-world/auxiliary/src/: lib.rs
microbit/src/06-hello-world/src/: main.rs
microbit/src/09-clocks-and-timers/: 1 - clocks-timers.md  2 - microbit-clock-timers.md  3 - timer-registers-timer-delay.md  4 - timer-registers-timer-configure.md  5 - led-roulette-with-raw-register-delay.md  6 - solution.md  Cargo.toml
microbit/src/09-clocks-and-timers/src/: main.rs
